<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Portefeuille</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in" tools:ignore="StringEscaping">se connecter ou s'inscrire</string>
    <string name="action_sign_in_short">se connecter</string>
    <string name="error_invalid_email" tools:ignore="StringEscaping">l'adresse Email n'est pas valide</string>
    <string name="error_invalid_password">mot de passe trop court</string>
    <string name="error_incorrect_password">mot de passe incorrect</string>
    <string name="error_field_required">ce champs est obligatoire</string>
    <string name="lost_password">Mot de passe oublié</string>
    <string name="connexion_failed">échec de connexion au serveur</string>
    <string name="about">A propos</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="revenu">Revenu</string>
    <string name="d_pense">Dépense</string>
    <string name="commentaire">Commentaire</string>
    <string name="valeur">Valeur</string>
    <string name="supprimer">Supprimer</string>
    <string name="date">Date</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_exemple">exemple</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
